Added assistedinject change up loader