@@ -4,10 +4,6 @@ apply plugin: 'java'
 // Apply the idea plugin to add support for IntelliJ IDEA
 apply plugin: 'idea'
 
-// sets default to run configuration
-apply plugin: 'application'
-
-
 /* We use Java 1.7 */
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -25,6 +21,7 @@ dependencies {
     // compile 'org.slf4j:slf4j-api:1.7.5'
     compile "org.encog:encog-core:3.2.0"
     compile "com.google.inject:guice:3.0"
+    compile "com.google.inject.extensions:guice-assistedinject:3.0"
     compile "com.cathive.fx:fx-guice:2.1.3"
 
     // include all local libs, here OpenCV since no Maven support yet, else use JavaCV
@@ -49,23 +46,33 @@ sourceSets {
 
 idea {
     workspace.iws.withXml { provider ->
+        // Default application run configuration
         def applicationDefaults = provider.node.component.find { it.@name == 'RunManager'}.configuration.find { it.@type == 'Application'}
         if (applicationDefaults != null) {
             applicationDefaults.module.@name = 'BachelorOpenCV'
 
             applicationDefaults.option.find { it.@name == 'MAIN_CLASS_NAME'}.@value = 'de.thatsich.bachelor.Main'
-            applicationDefaults.option.find { it.@name == 'VM_PARAMETERS'}.@value = '-Xmx1024m -XX:MaxPermSize=256m -Xss64k'
+            applicationDefaults.option.find { it.@name == 'VM_PARAMETERS'}.@value = '-Djava.library.path="$MODULE_DIR$/dll"'
             applicationDefaults.option.find { it.@name == 'WORKING_DIRECTORY'}.@value = 'file://$MODULE_DIR$'
         }
 
+        // default junit run configuration
         def jUnitDefaults = provider.node.component.find { it.@name == 'RunManager'}.configuration.find { it.@type == 'JUnit'}
         if (jUnitDefaults != null) {
             jUnitDefaults.module.@name = 'BachelorOpenCV'
 
             jUnitDefaults.option.find { it.@name == 'PACKAGE_NAME'}.@value = 'de.thatsich.bachelor'
             jUnitDefaults.option.find { it.@name == 'TEST_OBJECT'}.@value = 'package'
-            jUnitDefaults.option.find { it.@name == 'VM_PARAMETERS'}.@value = '-ea'
+            jUnitDefaults.option.find { it.@name == 'VM_PARAMETERS'}.@value = '-ea -Djava.library.path="$MODULE_DIR$/dll"'
             jUnitDefaults.option.find { it.@name == 'WORKING_DIRECTORY'}.@value = 'file://$MODULE_DIR$'
+        }
+
+        // actual app run configuration
+        def application = provider.node.component.find { it.@name == 'RunManager'}.configuration.find { it.@type == 'Application' && it.@name == 'OpenFX'}
+        if (application == null) {
+            def clonedNode = new XmlParser().parseText( XmlUtil.serialize(applicationDefaults))
+            clondeNode.@name = 'OpenFX'
+            provider.node.component.find { it.@name == 'RunManager'}.append(clonedNode)
         }
     }
 
@@ -81,13 +88,7 @@ idea {
         //if you love browsing Javadoc
         downloadJavadoc = true
 
-        //and hate reading sources :)
+        //and love reading sources :)
         downloadSources = true
     }
 }
-
-/*
- * APPLICATION PLUGIN
- */
-mainClassName = 'de.thatsich.bachelor.Main'
-//applicationDefaultJvmArgs = ["-Dgreeting.language=en"]
